--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
           <li v-for="detail in details">{{ detail }}</li>
         </ul>
         <div v-for="variant in variants" :key="variant.variantId">
-          <p>{{ variant.variantColor }}</p>
+          <p @mouseover="updateProduct{variant.variantImage}">{{ variant.variantColor }}</p>
         </div>
         <ul v-for="size in sizes">
           <li>{{ size }}</li>
         </ul>
       </div>
 
+      <div class="cart">
+        <p>Cart ({{ Cart }})</p>
+      </div>
+      <!--Shorthand for v-on is @-->
+      <button v-on:click="addToCart">Add to cart</button>
+      <button v-on:click="removeFromCart">Remove from cart</button>
     </div>
   </div>
 
