--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
-  <title>VUE</title>
+  <title>SOCKS</title>
 </head>
 <body>
   <div id="app">
@@ -20,18 +20,21 @@
 
       <div class="product-info">
         <!--Expression that takes data from Vue Instance-->
-        <h1>{{ product }}</h1>
+        <h1>{{ title }}</h1>
         <p>{{ description }}</p>
         <!--Conditional rendering-->
         <p v-if="inventory > 10>">In Stock</p>
         <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
-        <p v-else>Out of Stock</p>
+        <p v-else  :class="{ lineThrough }">Out of Stock</p>
         <ul>
           <li v-for="detail in details">{{ detail }}</li>
         </ul>
-        <div v-for="variant in variants" :key="variant.variantId">
-          <p @mouseover="updateProduct{variant.variantImage}">{{ variant.variantColor }}</p>
-        </div>
+        <div class="color-box"
+             v-for="(variant, index) in variants" 
+             :key="variant.variantId"
+             :style="{ backgroundColor: variant.variantColor }"
+             @mouseover="updateProduct(index)"
+             ></div>
         <ul v-for="size in sizes">
           <li>{{ size }}</li>
         </ul>
@@ -41,8 +44,14 @@
         <p>Cart ({{ Cart }})</p>
       </div>
       <!--Shorthand for v-on is @-->
-      <button v-on:click="addToCart">Add to cart</button>
-      <button v-on:click="removeFromCart">Remove from cart</button>
+      <button v-on:click="addToCart" 
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }"
+              >Add to cart</button>
+      <button v-on:click="removeFromCart"
+              :disabled="cart"
+              :class="{ disabledButton: cart }"
+              >Remove from cart</button>
     </div>
   </div>
 
