--- a/index.html
+++ b/index.html
@@ -9,50 +9,7 @@
 </head>
 <body>
   <div id="app">
-
-    <div class="product">
-
-      <div class="product-image">
-        <!--Data binding. Can use v-bind: for long-->
-        <img :src="image" :alt="altText" />
-        <a :href="link">
-      </div>
-
-      <div class="product-info">
-        <!--Expression that takes data from Vue Instance-->
-        <h1>{{ title }}</h1>
-        <p>{{ description }}</p>
-        <!--Conditional rendering-->
-        <p v-if="inventory > 10>">In Stock</p>
-        <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
-        <p v-else  :class="{ lineThrough }">Out of Stock</p>
-        <ul>
-          <li v-for="detail in details">{{ detail }}</li>
-        </ul>
-        <div class="color-box"
-             v-for="(variant, index) in variants" 
-             :key="variant.variantId"
-             :style="{ backgroundColor: variant.variantColor }"
-             @mouseover="updateProduct(index)"
-             ></div>
-        <ul v-for="size in sizes">
-          <li>{{ size }}</li>
-        </ul>
-      </div>
-
-      <div class="cart">
-        <p>Cart ({{ Cart }})</p>
-      </div>
-      <!--Shorthand for v-on is @-->
-      <button v-on:click="addToCart" 
-              :disabled="!inStock"
-              :class="{ disabledButton: !inStock }"
-              >Add to cart</button>
-      <button v-on:click="removeFromCart"
-              :disabled="cart"
-              :class="{ disabledButton: cart }"
-              >Remove from cart</button>
-    </div>
+    <product :premium="premium"></product>
   </div>
 
 <script src="main.js"></script>
