--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>SOCKS</title>
 </head>
 <body>
+  <div class="nav-bar"></div>
+
   <div id="app">
     <product :premium="premium"></product>
   </div>
