--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
   </div>
 
 <script src="main.js"></script>
-<script src="https://unpkg.com/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
 </body>
