--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <product :premium="premium"></product>
+    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
