--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <div class="nav-bar"></div>
 
   <div id="app">
+    <div class="cart">
+      <p>Cart ({{ cart.length }})</p>
+    </div>
     <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
   </div>
 
