--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <p>Cart ({{ cart.length }})</p>
     </div>
     <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
+    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
